# svc-server

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/config/: mod.rs  repo.rs  server.rs
src/service/: clone.rs  mod.rs  pull.rs  push.rs
src/util/: hash.rs  mod.rs
