[package]
name = "svc-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25.0", features = ["full"] }
hyper = { version = "1.0.0-rc.2", features = ["full"] }
http-body-util = "0.1.0-rc.2"
bytes = "1.4.0"
serde = { version = "1.0.152", features = ["derive"] }
toml = "0.7.2"
sha1 = "0.10.5"
